--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     </div>
     <nav>
         <ul>
-            <li><a href="projects.html">Projects.</a></li>
+            <li><a href="index.html">Projects.</a></li>
             <li><a href="about.html">About.</a></li>
             <li><a href="PDFs/CV-2.26.pdf" target="_blank">Resume.</a></li>
         </ul>
@@ -35,20 +35,24 @@
 <main class="about-container">
     <div class="intro">
         <div class="intro-image">
-            <img src="IMG_6115.JPG" width="100" alt="">
+            <img src="images/IMG_6115.JPG"  alt="">
         </div>
         <div class="intro-text">
-        <p>
-            Hi! I’m Phoebe.
-            Currently first year  master student in <br/>
-            information science in University of Michigan <br/>
-
-            Previous experience with Data Analyst, UIUX Designer, <br/>
-            and Architecture Designer. <br/>
-
-            I have a high aptitude for user research,<br/>
-            and a quick sense of adaptability.
-        </p>
+            <p>
+                Hi! I’m Phoebe.
+            </p>
+            <p>
+                Currently first year  master student in <br/>
+                Information Science at University of Michigan <br/>
+            </p>
+            <p>
+                Previous experience with Data Analyst, UIUX Designer, <br/>
+                and Architecture Designer. <br/>
+            </p>
+            <p>
+                I have a high aptitude for user research,<br/>
+                a quick sense of adaptability and problem solving.
+            </p>
         </div>
     </div>
 </main>
