--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/png" href="images/icon.png" />
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
@@ -14,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" />
+    <script src="project.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
     </div>
     <nav>
         <ul>
-            <li><a href="projects.html">Projects.</a></li>
+            <li><a href="index.html">Projects.</a></li>
             <li><a href="about.html">About.</a></li>
             <li><a href="PDFs/CV-2.26.pdf" target="_blank">Resume.</a></li>
         </ul>
@@ -55,6 +55,33 @@
         </div>
     </div>
 
+    <div class="projects-container">
+        <div class="project">
+            <a href="project1.html">
+                <div class="project-thumbnail">
+                    <!-- <img src="images/ComingSoon.png" alt="Project 1 Thumbnail"> -->
+                    <p>Coming Soon.</p>
+                </div>
+                <div class="project-info">
+                    <h3>Project Title 1</h3>
+                    <p>A short description of Project 1. This project focuses on implementing UI/UX best practices to enhance user interaction.</p>
+                </div>
+            </a>
+        </div>
+        <div class="project">
+            <a href="project1.html">
+                <div class="project-thumbnail">
+                    <!-- <img src="images/ComingSoon.png" alt="Project 2 Thumbnail"> -->
+                    <p>Coming Soon.</p>
+                </div>
+                <div class="project-info">
+                    <h3>Project Title 2</h3>
+                    <p>A short description of Project 2. This project involves data analysis and visualization to provide insights into user behavior.</p>
+                </div>
+            </a>
+        </div>
+        <!-- Repeat the above block for more projects -->
+    </div>
 </main>
 
 
