--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" />
-    <script src="project.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -34,9 +33,9 @@
     </div>
     <nav>
         <ul>
-            <li><a href="index.html">Projects.</a></li>
-            <li><a href="about.html">About.</a></li>
-            <li><a href="PDFs/CV-2.26.pdf" target="_blank">Resume.</a></li>
+            <li><a href="projects.html">-> Projects.</a></li>
+            <li><a href="about.html">-> About.</a></li>
+            <li><a href="PDFs/CV-5.13.pdf" target="_blank">-> Resume.</a></li>
         </ul>
     </nav>
 </header>
@@ -47,40 +46,11 @@
     <div class = overview>
         <div class="overview-intro">
             <p><span>Hey there, I'm Phoebe Liu,</span>
-                a software developer <br/>
-                specializing in JavaScript's wizardry,<br/>
+                a front-end web developer <br/>
+                specializing in JavaScript,<br/>
                 crafting captivating digital experiences <br/>
                 with seamless interactions and dynamic interfaces.</p>
-<!--            I weave intricate spells of code to transform static designs<br/>-->
         </div>
-    </div>
-
-    <div class="projects-container">
-        <div class="project">
-            <a href="project1.html">
-                <div class="project-thumbnail">
-                    <!-- <img src="images/ComingSoon.png" alt="Project 1 Thumbnail"> -->
-                    <p>Coming Soon.</p>
-                </div>
-                <div class="project-info">
-                    <h3>Project Title 1</h3>
-                    <p>A short description of Project 1. This project focuses on implementing UI/UX best practices to enhance user interaction.</p>
-                </div>
-            </a>
-        </div>
-        <div class="project">
-            <a href="project1.html">
-                <div class="project-thumbnail">
-                    <!-- <img src="images/ComingSoon.png" alt="Project 2 Thumbnail"> -->
-                    <p>Coming Soon.</p>
-                </div>
-                <div class="project-info">
-                    <h3>Project Title 2</h3>
-                    <p>A short description of Project 2. This project involves data analysis and visualization to provide insights into user behavior.</p>
-                </div>
-            </a>
-        </div>
-        <!-- Repeat the above block for more projects -->
     </div>
 </main>
 
