--- a/about.html
+++ b/about.html
@@ -25,9 +25,9 @@
     </div>
     <nav>
         <ul>
-            <li><a href="index.html">Projects.</a></li>
-            <li><a href="about.html">About.</a></li>
-            <li><a href="PDFs/CV-2.26.pdf" target="_blank">Resume.</a></li>
+            <li><a href="index.html">-> Projects.</a></li>
+            <li><a href="about.html">-> About.</a></li>
+            <li><a href="PDFs/CV-5.13.pdf" target="_blank">-> Resume.</a></li>
         </ul>
     </nav>
 </header>
